tests/expectations/compiler/integers/u64/hex_min_fail.out
Error [ETYC0372008]: The value -0x1 is not a valid `u64`
    --> compiler-test:4:18
     |
   4 |     let a: u64 = -0x1u64;
     |                  ^^^^^^^
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:2:9
     |
   2 | program test.aleo { }
     |         ^^^^^^^^^
